<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_EventList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/event"
            android:gravity="center"
            android:text="@string/caption_eventsBtn"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_RegisteredEvents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/registered_events"
            android:background="#00000000"
            android:textColor="@color/black"
            android:singleLine="false"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/caption_Btnregistered_events"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_Map"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/location"
            android:gravity="center"
            android:text="@string/caption_Btnmap"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_QRScanner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/qr_code_scanner"
            android:gravity="center"
            android:text="@string/caption_Btnscan_qr"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_MyEvents"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/my_events"
            android:gravity="center"
            android:text="@string/caption_Btnmy_events"
            android:textColor="@color/black"
            android:textSize="11sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>