<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


      <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/editProfileImageButton"
          android:layout_width="58dp"
          android:layout_height="54dp"
          android:clickable="true"
          app:backgroundTint="@color/colorAdd"
          app:layout_constraintBottom_toBottomOf="@+id/image"
          app:layout_constraintEnd_toEndOf="@+id/image"
          app:layout_constraintTop_toBottomOf="@+id/image"
          app:srcCompat="@android:drawable/ic_menu_edit" />

      <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/deleteProfileImageButton"
          android:layout_width="58dp"
          android:layout_height="54dp"
          android:clickable="true"
          app:backgroundTint="@color/colorRemove"
          app:layout_constraintBottom_toBottomOf="@+id/image"
          app:layout_constraintStart_toStartOf="@+id/image"
          app:layout_constraintTop_toBottomOf="@+id/image"
          app:srcCompat="@drawable/remove" />


      <com.google.android.material.imageview.ShapeableImageView
          android:id="@+id/image"
          android:layout_width="250dp"
          android:layout_height="250dp"
          android:layout_marginTop="50dp"
          android:scaleType="centerCrop"
          android:src="@mipmap/ic_launcher"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:shapeAppearanceOverlay="@style/rounded_corners_lg" />

      <EditText
          android:id="@+id/editTextName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:ems="10"
          android:hint="Name"
          android:inputType="text"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/image" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

      <Switch
          android:id="@+id/location_switch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/location"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/notifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_switch" />

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:id="@+id/create_facility_button"
          android:layout_marginTop="8dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/notification_switch"
          android:text="Create Facility" />

      <Button
          android:id="@+id/confirmButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="Confirm"
          app:backgroundTint="@color/goodGreen"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/location_switch" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
